Fix overflow main

--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,12 @@ main {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	align-content: space-evenly;
 }
 
 .participant {
 	position: relative;
 	margin: .2rem;
+	height: 140px;
 }
 
 .name {
